--- a/css/index-section3.css
+++ b/css/index-section3.css
@@ -5,6 +5,7 @@
 }
 
 .print-swiper .swiper-slide {
+  position: relative;
   width: 450px !important;
   height: 646px !important;
   display: flex;
@@ -15,7 +16,18 @@
   border-radius: 20px;
 }
 
-.print-swiper .swiper-slide button:hover {
+.print-swiper .swiper-slide:hover::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8); /* 배경색과 투명도 설정 */
+  background-image: url(../img/index/more-detail.png); /* 이미지 경로 */
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 97px;
 }
 
 .print-swiper .swiper-slide img {
