--- a/css/index-section3.css
+++ b/css/index-section3.css
@@ -87,6 +87,7 @@
 @media (max-width: 1280px) {
   .print-swiper {
     margin: 20px -20px 0;
+    padding-right: 40px;
     width: 100vw;
     overflow: hidden !important;
   }
@@ -98,6 +99,10 @@
   .print-swiper .swiper-slide {
     width: 200px !important;
     height: 300px !important;
+  }
+
+  .print-swiper .swiper-slide:hover::after {
+    display: none;
   }
 
   .print-swiper .swiper-slide img {
