--- a/css/index-section2.css
+++ b/css/index-section2.css
@@ -6,11 +6,22 @@
   gap: 16px;
 }
 .standard-area ul li a {
+  position: relative;
   display: block;
   width: 100%;
   height: 99px;
   border-radius: 20px;
   overflow: hidden;
+}
+.standard-area ul li a span {
+  position: absolute;
+  top: 30px;
+  left: 50px;
+  width: auto;
+  color: var(--black);
+  font-size: 22px;
+  font-weight: 600;
+  letter-spacing: -0.66px;
 }
 .standard-area a .pc-img {
   display: block;
@@ -30,6 +41,11 @@
   }
   .standard-area ul li a {
     height: auto;
+  }
+  .standard-area ul li a span {
+    top: 20px;
+    left: 30px;
+    font-size: 18px;
   }
   .standard-area a .pc-img {
     display: none;
