--- a/css/global.css
+++ b/css/global.css
@@ -1,15 +1,21 @@
 :root {
   --font-family: sans-serif;
+
   --black: #000;
   --black0: #0c0c0c;
   --black1: #1a1a1a;
   --light-black: #333;
+
   --light-brown: #3a3413;
   --brown: #403a23;
   --dark-brown: #523a22;
+
   --blue: #00a8da;
+
+  --gray7: #757575;
   --light-gray: #ebebeb;
   --gray: #fafafa;
+
   --white: #ffffff;
   --border: #dbdbdb;
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
