--- a/css/global.css
+++ b/css/global.css
@@ -19,6 +19,8 @@
   --white: #ffffff;
   --border: #dbdbdb;
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+
+  --bg1: #fbfbfb;
 }
 * {
   scroll-behavior: smooth;
