--- a/css/index-section4.css
+++ b/css/index-section4.css
@@ -25,7 +25,7 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background-color: var(--light-black);
+  background-color: var(--black3);
   border-radius: 20px;
 }
 
