--- a/css/index-section4.css
+++ b/css/index-section4.css
@@ -147,10 +147,11 @@
   }
 
   .portfolio-btn-area {
-    margin-top: 20px;
+    margin: 20px 0 0;
   }
 
   .portfolio-btn {
+    width: 100%;
     height: 48px;
     font-size: 16px;
   }
