--- a/css/global.css
+++ b/css/global.css
@@ -24,6 +24,7 @@
   --bg2: #676767;
   --bg3: #d9d9d9;
 }
+
 * {
   scroll-behavior: smooth;
   box-sizing: border-box;
@@ -33,21 +34,37 @@
   line-height: 140%; /* 28px */
   color: var(--black);
 }
+
 body {
   padding: 0;
   margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: var(--font-family);
   background: var(--white);
 }
+
+main {
+  flex-grow: 1;
+}
+
+section {
+  margin: 0 auto;
+  width: 1280px;
+}
+
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 .blind {
   position: absolute;
   width: 1px;
@@ -55,6 +72,7 @@ a {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 button,
 input[type="button"] {
   background: none;
@@ -63,4 +81,11 @@ input[type="button"] {
 
 button {
   cursor: pointer;
+}
+
+@media (max-width: 1280px) {
+  section {
+    width: 100%;
+    padding: 0 20px;
+  }
 }
