--- a/css/global.css
+++ b/css/global.css
@@ -23,6 +23,8 @@
   --bg1: #fbfbfb;
   --bg2: #676767;
   --bg3: #d9d9d9;
+  --bg4: #f4f0e4;
+  --bg5: #f8f8f8;
 }
 
 * {
@@ -49,9 +51,14 @@ main {
   flex-grow: 1;
 }
 
+h2,
 section {
   margin: 0 auto;
   width: 1280px;
+}
+
+h2 {
+  margin-bottom: 80px;
 }
 
 ul {
