style  : h2.title 수정하다

--- a/css/global.css
+++ b/css/global.css
@@ -61,6 +61,23 @@ h2 {
   margin-bottom: 80px;
 }
 
+h2.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--black);
+  font-size: 36px;
+  font-weight: 600;
+  line-height: normal;
+}
+
+h2.title .breadcrumb {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 140%; /* 22.4px */
+  letter-spacing: -0.48px;
+}
+
 ul {
   list-style: none;
   padding: 0;
@@ -94,5 +111,18 @@ button {
   section {
     width: 100%;
     padding: 0 20px;
+  }
+
+  h2.title {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 24px;
+    gap: 10px;
+  }
+
+  h2.title .breadcrumb {
+    font-size: 12px;
+    letter-spacing: -0.36px;
   }
 }
