--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,5 @@
 :root {
-  --font-family: sans-serif;
+  --font-family: "Pretendard", sans-serif;
 
   --black: #000;
   --black0: #0c0c0c;
@@ -35,6 +35,7 @@
   font-weight: 400;
   line-height: 140%; /* 28px */
   color: var(--black);
+  font-family: var(--font-family);
 }
 
 body {
