feat 브랜드 스토리 mo 상단영역 추가하다

--- a/css/global.css
+++ b/css/global.css
@@ -58,11 +58,8 @@ section {
   width: 1280px;
 }
 
-h2 {
-  margin-bottom: 80px;
-}
-
 h2.title {
+  margin-bottom: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -115,10 +112,13 @@ button {
   }
 
   h2.title {
+    margin-bottom: 20px;
+    padding: 0 20px;
+    font-size: 24px;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    font-size: 24px;
     gap: 10px;
   }
 
