--- a/css/brand-story/brand-story.css
+++ b/css/brand-story/brand-story.css
@@ -55,16 +55,22 @@ main {
   transform: translate(-35px, -10px) rotate(12.437deg) scale(1.3);
 }
 
-.story-intro-section b {
-  font-weight: 600;
-}
-
-.story-intro-section p {
+.story-intro-content p {
+  z-index: 3;
+  position: relative;
   color: var(--black);
   font-size: 24px;
   font-weight: 400;
   line-height: 170%; /* 40.8px */
   letter-spacing: -0.72px;
+}
+
+.story-intro-content p .mo-only {
+  display: none;
+}
+
+.story-intro-content b {
+  font-weight: 600;
 }
 
 /* 핵심 가치 섹션 */
@@ -181,5 +187,48 @@ main {
 @media (max-width: 1280px) {
   main {
     padding: 40px 0 70px;
+  }
+
+  .story-intro-section {
+    margin: 0 20px 40px;
+    padding: 0;
+    width: auto;
+  }
+
+  .story-intro-section:before {
+    width: 88px;
+    height: 93px;
+    background: url(../../img/brand-story/brand-story-intro-bg1-mo.png)
+      center/88px 93px no-repeat;
+  }
+
+  .story-intro-section:after {
+    width: 88px;
+    height: 73px;
+    background: url(../../img/brand-story/brand-story-intro-bg2-mo.png)
+      center/88px 73px no-repeat;
+  }
+
+  .story-intro-content {
+    padding: 20px 20px 20px 20px;
+  }
+
+  .story-intro-content:after {
+    right: 0;
+    bottom: 0;
+    width: 83px;
+    height: 75px;
+    background: url(../../img/brand-story/brand-story-intro-bg3.png) center/83px
+      75px no-repeat;
+    transform: translate(-19px, -1px) rotate(-10deg) scale(1.3);
+  }
+
+  .story-intro-content p {
+    font-size: 16px;
+    letter-spacing: -0.48px;
+  }
+
+  .story-intro-content p .mo-only {
+    display: block;
   }
 }
