style 사찰행정의 새로운 기준 mo text 스타일 수정하다

--- a/css/index/index-section2.css
+++ b/css/index/index-section2.css
@@ -43,9 +43,10 @@
     height: auto;
   }
   .standard-area ul li a span {
-    top: 20px;
+    top: 50%;
     left: 30px;
     font-size: 18px;
+    transform: translateY(-50%);
   }
   .standard-area a .pc-img {
     display: none;
