--- a/css/introduction-effect/introduction-effect.css
+++ b/css/introduction-effect/introduction-effect.css
@@ -242,50 +242,104 @@ main {
     margin-bottom: 70px;
   }
 
-  .section-title {
-    margin-bottom: 20px;
+  .goals-section .title {
     font-size: 18px;
-    letter-spacing: -0.54px;
-  }
-
-  .goals-list {
-    gap: 20px;
+    margin-bottom: 20px;
   }
 
   .goal-item {
     flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
+    gap: 10px;
+  }
+
+  .goal-item:before {
+    display: none;
+  }
+
+  .goal-content {
     padding: 20px;
+    width: 100%;
+    height: auto;
+    flex-direction: row;
+    gap: 10px;
+    border-radius: 20px;
   }
 
   .goal-content h4 {
-    margin-bottom: 15px;
-    font-size: 16px;
-    letter-spacing: -0.48px;
+    font-size: 24px;
+    line-height: 140%; /* 33.6px */
   }
 
   .goal-content li {
-    margin-bottom: 8px;
-    padding-left: 15px;
     font-size: 14px;
-    letter-spacing: -0.42px;
+    line-height: 160%; /* 22.4px */
   }
 
   .goal-content li:before {
-    top: 10px;
-    width: 3px;
-    height: 3px;
+    margin: 10px 10px 0;
+    width: 4px;
+    height: 4px;
+  }
+
+  .goal-content li + li {
+    margin-top: 0px;
   }
 
   .goal-summary {
+    position: relative;
+    padding: 20px;
     width: 100%;
-    padding: 15px;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    border-radius: 20px;
+  }
+
+  .goal-summary:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: -20px;
+    transform: translateX(-50%) rotate(90deg);
+    width: 34px;
+    height: 24px;
+    background: url(../../img/Introduction-effect/goal-arrow.png) center/34px
+      24px no-repeat;
   }
 
   .goal-summary span {
+    font-size: 24px;
+    font-weight: 600;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0;
+  }
+
+  .goal-summary span:last-child {
+    padding-left: 10px;
+    position: relative;
     font-size: 14px;
-    letter-spacing: -0.42px;
+    font-weight: 400;
+    line-height: 160%; /* 22.4px */
+    justify-content: flex-start;
+    text-align: left;
+  }
+
+  .goal-summary span:last-child:before {
+    position: absolute;
+    top: 12px;
+    left: 0;
+    content: "";
+    width: 4px;
+    height: 4px;
+    background: var(--black);
+    border-radius: 50%;
+  }
+
+  .goal-summary span b {
+    font-size: 24px;
+    line-height: 140%; /* 33.6px */
   }
 
   /* 기회 섹션 */
