feat : 바로 비교보기 section1 mo를  추가하다

--- a/css/compare-now/compare-now.css
+++ b/css/compare-now/compare-now.css
@@ -29,11 +29,13 @@ main {
 }
 
 .intro-content {
+  position: relative;
+  z-index: 2;
   margin-bottom: 66px;
 }
 
 .intro-content h3.title {
-  margin-bottom: 80px;
+  margin-bottom: 55px;
   color: var(--black);
   font-size: 30px;
   font-weight: 500;
@@ -50,7 +52,6 @@ main {
 }
 
 /* 사용자 후기 */
-
 .testimonials-list {
   padding: 0 0 0 143px;
 }
@@ -236,7 +237,7 @@ main {
   }
 
   .intro-content-box {
-    padding: 20px;
+    padding: 20px 20px 35px;
   }
 
   .intro-content-box:before {
@@ -246,7 +247,11 @@ main {
       no-repeat;
   }
 
-  .intro-content h3 {
+  .intro-content {
+    margin-bottom: 40px;
+  }
+
+  .intro-content h3.title {
     margin-bottom: 10px;
     font-size: 18px;
     line-height: 140%; /* 25.2px */
@@ -258,75 +263,55 @@ main {
     letter-spacing: -0.48px;
   }
 
-  /* 사용자 후기 섹션 */
-  .testimonials-section {
-    margin-bottom: 40px;
-  }
-
-  .testimonials-grid {
-    display: block;
-    gap: 0;
+  /* 사용자 후기 */
+  .testimonials-list {
+    padding: 0;
   }
 
   .testimonial-item {
-    margin-bottom: 30px;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 15px;
+    align-items: flex-end;
+    gap: 6px;
   }
 
-  .testimonial-item:last-child {
-    margin-bottom: 0;
+  .testimonial-item + .testimonial-item {
+    margin-top: 40px;
   }
 
-  .testimonial-avatar {
-    width: 60px;
-    height: 60px;
-    flex-shrink: 0;
+  .testimonial-item:nth-child(2) {
+    padding-left: 0px;
   }
 
-  .testimonial-info {
-    align-items: flex-start;
-    gap: 3px;
-    min-width: 80px;
+  .testimonial-avatar img {
+    width: 64px;
+    height: 89px;
   }
 
-  .testimonial-info .role {
-    font-size: 14px;
+  .testimonial-avatar-info {
+    padding: 5px 10px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    left: 50%;
+    transform: translate(-50%, 15px);
   }
 
-  .testimonial-info .age {
+  .testimonial-avatar-info span {
+    text-align: center;
     font-size: 12px;
+    font-weight: 400;
+    line-height: 170%; /* 20.4px */
+    letter-spacing: -0.36px;
   }
 
   .testimonial-bubble {
-    flex: 1;
-    padding: 20px;
-    border-radius: 15px;
-  }
-
-  .testimonial-bubble:before {
-    top: 20px;
-    left: -10px;
-    transform: none;
-    border-left: 10px solid transparent;
-    border-right: 10px solid var(--white);
-    border-bottom: 10px solid transparent;
-    border-top: 10px solid transparent;
-  }
-
-  .testimonial-bubble:after {
-    top: 20px;
-    left: -11px;
-    transform: none;
-    border-left: 11px solid transparent;
-    border-right: 11px solid #eee;
-    border-bottom: 11px solid transparent;
-    border-top: 11px solid transparent;
+    margin-top: 0;
+    margin-bottom: 70px;
+    padding: 10px 15px;
   }
 
   .testimonial-bubble p {
     font-size: 14px;
+    line-height: 170%;
     letter-spacing: -0.42px;
   }
 
