--- a/css/compare-now/compare-now.css
+++ b/css/compare-now/compare-now.css
@@ -166,7 +166,7 @@ main {
 }
 
 .comparison-description p {
-  color: #000;
+  color: var(--black);
   font-size: 24px;
   font-weight: 400;
   line-height: 34px; /* 141.667% */
@@ -199,16 +199,20 @@ main {
 }
 
 .comparison-table .cs-column {
-  width: 536px;
   border-right: 1px solid var(--border);
 }
 
-.comparison-table .subira-column {
+.comparison-table .cs-column div {
+  width: 536px;
+}
+
+.comparison-table .subira-column div {
   width: 536px;
 }
 
 .comparison-table thead th:nth-child(2) {
   height: 119px;
+  color: var(--black);
   font-weight: 600;
   background: var(--bg7);
 }
@@ -329,44 +333,62 @@ main {
   }
 
   /* 비교표 섹션 */
-  .comparison-section .title {
-    margin-bottom: 20px;
-    font-size: 18px;
-  }
-
   .comparison-description {
-    margin-bottom: 20px;
+    padding-left: 8px;
   }
 
   .comparison-description p {
     font-size: 14px;
-    letter-spacing: -0.42px;
+    line-height: 160%; /* 22.4px */
+  }
+
+  .comparison-description:before {
+    top: 10px;
+    width: 3px;
+    height: 3px;
   }
 
   .comparison-table th,
   .comparison-table td {
-    padding: 15px 10px;
-  }
-
-  .comparison-table th {
-    font-size: 14px;
-    letter-spacing: -0.42px;
-  }
-
-  .comparison-table td {
-    font-size: 12px;
-    letter-spacing: -0.36px;
+    font-size: 16px;
   }
 
   .comparison-table .item-column {
-    width: 20%;
+    width: 119px;
   }
 
-  .comparison-table .cs-column {
-    width: 40%;
+  .comparison-table .cs-column div {
+    width: 281px;
   }
 
-  .comparison-table .subira-column {
-    width: 40%;
+  .comparison-table .subira-column div {
+    width: 281px;
+  }
+
+  .comparison-table .item-column div {
+    width: 119px;
+  }
+
+  .comparison-table thead th:nth-child(2) {
+    height: 64px;
+    line-height: 140%; /* 22.4px */
+  }
+
+  .comparison-table thead th:last-child {
+    height: 64px;
+    font-weight: 600;
+    color: #2f54a7;
+  }
+  .comparison-table thead th:last-child b {
+    font-weight: 700;
+    color: #2f54a7;
+    font-size: 16px;
+  }
+
+  .comparison-table tbody td div {
+    min-height: 54px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
